k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vieng-frontend
  namespace: vieng
spec:
  selector:
    app: vieng-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
